# epiphany-fastlibs

./: CMakeLists.txt  TODO
inc/: e-hal.h  ehal-backward-comp.h  ehal-eCoreMmap.h  ehal-mmap.h  ehal-print.h  memmap-epiphany-cores.h  memmap-epiphany-system.h
inc/loader/: ehal-gen-file-loader.h  ehal_hdf_loader.h  ehal_srec_loader.h
inc/state/: ehal-state.h  ehal_generic_file_loader.h  ehal_hdf_loader.h  ident-adapteva-epiphany.h  ident-xilinx-zynq.h
src/: ehal-backward-comp.c  ehal-eCoreMmap.c  ehal-mmap.c  ehal.c
src/loader/: ehal-gen-file-loader.c  ehal-hdf-loader.c  ehal-srec-loader.c  ehal_generic_file_loader.c  ehal_hdf_loader.c  ehal_srec_loader.c
src/state/: ehal_hdf_loader.c  ident-adapteva-epiphany.c  ident-xilinx-zynq.c
tests/clockgating_mode/: CMakeLists.txt  clockgating_mode.c
tests/e-toggle-led/: CMakeLists.txt  e-toggle-led.c
tests/naiiv/: CMakeLists.txt  helloworld.c  main.c
